compiler/src/test/resources/golden/errors/type_tuple_arity.err
error: this pattern has 3 elements but the scrutinee is (Int, Int)
  --> type_tuple_arity.dawn:3:5
  |
3 |     (a, b, c) -> a
  |     ^^^^^^^^^
  = hint: a tuple pattern must bind exactly 2 element(s)
